--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5845,6 +5845,8 @@ PNH sightseeing on 5th-6th .<br>
 * Saw the temple (largest hindu temple in the USA), dinner at Shayona cafe, snacks shopping.<br>
 * Left Robbinsville at 8pm, reached home at 10.15pm (non-stop).<br>
 * PNH-HNH at WTES for some help on 16th.<br>
+* Shopping at Giant, Wegmans and Krispy Kreme on 17th.<br>
+* HNH swimming class on 18th at 1.30pm.<br>
 * 
 </Table> 
 
