--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5847,7 +5847,10 @@ PNH sightseeing on 5th-6th .<br>
 * PNH-HNH at WTES for some help on 16th.<br>
 * Shopping at Giant, Wegmans and Krispy Kreme on 17th.<br>
 * HNH swimming class on 18th at 1.30pm.<br>
-* 
+* HNH haircut at home by PNH on 20th.<br>
+* Back to school night at CMS on 21st (NPH-PNH).<br>
+
+* HNH first day of 7th grade at CMS on 26th.<br>
 </Table> 
 
 </HTML>                     
