--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5463,7 +5463,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH orthodontist appointment on 25th, X-rays -- rubber band snapped while coming back.<br>
 * HNH orthodontist appointment on 26th to fix the rubber band.<br>
 * NPH flu shot at STScI on 28th.<br>
-* Play day (Badminton) at CMS on 30th.<br>
+* Play day (Badminton) at CMS on 30th, dinner pick up from Domino's.<br>
 * Dharafai and Urmil came for about 1 hour to meet Bharatiben on 30th.</TD>
 <TR>
 <TD><HR></TD>
@@ -5849,8 +5849,14 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 18th at 1.30pm.<br>
 * HNH haircut at home by PNH on 20th.<br>
 * Back to school night at CMS on 21st (NPH-PNH).<br>
-
+* HNH School Ambassador (helping teachers) for new 6th grader on 22nd.<br>
+* HNH swimming class on 22nd at 6.30pm (makeup).<br>
+* PNH shopping at Walmart and Sam's club on 23rd.<br>
+* NAM picnic at Piney Run Park -- 11.30am to 5.30pm -- on 24th.<br>
+* NPH haircut at home by PNH on 25th.<br>
+* HNH swimming class on 25th at 1.30pm.<br>
 * HNH first day of 7th grade at CMS on 26th.<br>
+* PNH started working at WTES as a daily substitute on 26th.<br>
 </Table> 
 
 </HTML>                     
