--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5851,12 +5851,20 @@ PNH sightseeing on 5th-6th .<br>
 * Back to school night at CMS on 21st (NPH-PNH).<br>
 * HNH School Ambassador (helping teachers) for new 6th grader on 22nd.<br>
 * HNH swimming class on 22nd at 6.30pm (makeup).<br>
+* PNH-HNH to YMCA on 23rd.<br>
 * PNH shopping at Walmart and Sam's club on 23rd.<br>
-* NAM picnic at Piney Run Park -- 11.30am to 5.30pm -- on 24th.<br>
+* NAM picnic at Piney Run Park (60 miles round trip) -- 11.30am to 5.30pm -- on 24th.<br>
 * NPH haircut at home by PNH on 25th.<br>
 * HNH swimming class on 25th at 1.30pm.<br>
 * HNH first day of 7th grade at CMS on 26th.<br>
 * PNH started working at WTES as a daily substitute on 26th.<br>
+
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Sep 2024</TD>
+<TD>
 </Table> 
 
 </HTML>                     
