--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5815,6 +5815,7 @@ PNH sightseeing on 5th-6th .<br>
 * PNH-HNH to YMCA on 29th.<br>
 * Second time police stopped me -- crossed red light through Domino's parking lot -- got warning, no ticket on 29th.<br>
 * PNH lunch at Panera Bread with a school colleague on 30th.<br>
+* NPH dental appointment (got new trays, 13-17) on 30th.<br>
 * Watched Major League Cricket (MLC) games and Paris Olympics this month.</TD>
 <TR>
 <TD><HR></TD>
