--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5859,13 +5859,15 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 25th at 1.30pm.<br>
 * HNH first day of 7th grade at CMS on 26th.<br>
 * PNH started working at WTES as a daily substitute on 26th.<br>
-
+* Sad news! Bharatiben left us on 29th morning in UK -- passed away in sleep, heart failure.<br>
+* Shopping at Wegmans on 31st, dinner at Taco Bell.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
 </TR>
 <TD>Sep 2024</TD>
 <TD>
+* HNH swimming class on 1st at 1.30pm.<br>
 </Table> 
 
 </HTML>                     
