--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5868,6 +5868,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Sep 2024</TD>
 <TD>
 * HNH swimming class on 1st at 1.30pm.<br>
+* JPH-KPH and PHV-NPV-CHV visited Baku (Azerbaijan) for 5 days.<br>
 </Table> 
 
 </HTML>                     
