--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5869,6 +5869,11 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * HNH swimming class on 1st at 1.30pm.<br>
 * JPH-KPH and PHV-NPV-CHV visited Baku (Azerbaijan) for 5 days.<br>
+* Shopping at Giant, PNH-HNH at Rotunda for NPH office packing on 7th.<br>
+* HNH swimming class on 8th at 1.30pm.<br>
+* N-H to IAD airport to drop off PNH (Iberia/British Airways, Economy) on 8th.<br> 
+* Total ~155 miles (5.15 pm to 9.00 pm), all dinner at Subway.<br>
+* 
 </Table> 
 
 </HTML>                     
