--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5872,7 +5872,9 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Giant, PNH-HNH at Rotunda for NPH office packing on 7th.<br>
 * HNH swimming class on 8th at 1.30pm.<br>
 * N-H to IAD airport to drop off PNH (Iberia/British Airways, Economy) on 8th.<br> 
-* Total ~155 miles (5.15 pm to 9.00 pm), all dinner at Subway.<br>
+* Total ~162 miles (5.30 pm to 10.20 pm), all dinner at Subway (Tysons Corner).<br>
+* Bharatiben Cremation on 10th morning in UK.<br>
+* N-H to BWI airport to pick up PNH (British Airways, Economy) on 11th, dinner pick up from Chipotle.<br> 
 * 
 </Table> 
 
