--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5875,6 +5875,9 @@ PNH sightseeing on 5th-6th .<br>
 * Total ~162 miles (5.30 pm to 10.20 pm), all dinner at Subway (Tysons Corner).<br>
 * Bharatiben Cremation on 10th morning in UK.<br>
 * N-H to BWI airport to pick up PNH (British Airways, Economy) on 11th, dinner pick up from Chipotle.<br> 
+* HNH swimming class on 14th at 11.00am.<br>
+* Shopping at Aldi and Sam's club on 14th.<br>
+* Bhuvan to India for Asthi visarjan and pujas on 14th-18th.<br>
 * 
 </Table> 
 
