--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5885,6 +5885,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 21st.<br>
 * NPH-HNH to YMCA to cancel membership (as of 31st Oct) -- played Table Tennis -- on 22nd.<br>
 * NPH haircut at home by PNH on 22nd.<br>
+* NPH dental appointment (some spacing adjustment and got new trays, 18-21) on 24th.<br>
 
 </Table> 
 
