--- a/personal/memories.html
+++ b/personal/memories.html
@@ -3520,12 +3520,12 @@ PNH sightseeing on 5th-6th .<br>
 * Cherry blossom peaked on 5th April so visited again on 8th April -- huge difference in one week.<br>
 * Shopping at Target, Walmart -- Goodwill clothes donation -- dinner at Burger King on 14th.<br>
 * HNH haircut (NPH/HNH to Supercuts), HNH swimming class -- shopping at Patel Brothers, Sam's club on 15th.<br>
-* PNH to Rotunda for lunch at MOD pizza on 18th.<br>
+* PNH to Rotunda for lunch at MOD Pizza on 18th.<br>
 * NPH dental appointment (peridontist -- bone grafting on 1-2 tooth) on 19th.<br>
 * NAM Patotsav at GB Temple on 21st -- 5pm to 10pm, traditional dresses (NPH dhoti,kurta).<br>
 * WTES at Camden Yards (Orioles baseball game, section 98) on 22nd -- 1pm to 4.30pm -- dinner at Chipotle.<br>
 * HNH school field trip to Baltimore Museum of Art on 27th.<br>
-* Shopping at IKEA, Walmart -- rides at Carnival, HNH ate burger at BK, dinner at MOD pizza (Rotunda) on 28th.<br>
+* Shopping at IKEA, Walmart -- rides at Carnival, HNH ate burger at BK, dinner at MOD Pizza (Rotunda) on 28th.<br>
 * Shopping at Patel Brothers, Sam's club on 29th.</TD>
 <TR>
 <TD><HR></TD>
@@ -4544,7 +4544,7 @@ PNH sightseeing on 5th-6th .<br>
 * Dkaki double knee replacement surgery on 15th.<br>
 * Honda Civic did not start so PNH took CR-V to WTES on 18th.<br>
 * Bought car battery portable jumper starter for Civic on 20th, used it successfully on 21st.<br>
-* Dinner at MOD Pizza on 20th -- sat outside MOD to eat, first time in nearly 1 year.<br>
+* Dinner at MOD Pizza on 20th -- sat outside to eat, first time in nearly 1 year.<br>
 * Arunmama passed away on 21st after few weeks of COVID complications (Lungs/Kidney).<br>
 * Shopping at Patel Brothers on 21st.<br>
 * House hunting  with Lorrie -- 4 houses on 27th, lunch pick-up Chipotle, Shopping at Sam's club.<br>
@@ -5503,7 +5503,7 @@ PNH sightseeing on 5th-6th .<br>
 * Honda completed 50,000 miles on 12th.<br>
 * Shopping at Kohl's and Sam's club (NPH-PNH) on 12th.<br> 
 * HNH swimming class on 19th at 11.00am.<br>
-* BCD birthday on 19th -- lunch at MOD, Almond tart cutting in the evening, sweater gift.<br>
+* BCD birthday on 19th -- lunch at MOD Pizza, Almond tart cutting in the evening, sweater gift.<br>
 * Shopping at Sam's club and Wegmans on 19th.<br>
 * Shopping at Arundel Mills Mall (2pm to 7pm) on 24th.<br>
 * NPH haircut at Floyd's on 25th.<br>
@@ -5886,7 +5886,8 @@ PNH sightseeing on 5th-6th .<br>
 * NPH-HNH to YMCA to cancel membership (as of 31st Oct) -- played Table Tennis -- on 22nd.<br>
 * NPH haircut at home by PNH on 22nd.<br>
 * NPH dental appointment (some spacing adjustment and got new trays, 18-21) on 24th.<br>
-
+* Play day (Badminton) at CMS on 28th, lunch at MOD Pizza.<br>
+* Shopping at Sam's club on 28th.<br>
 </Table> 
 
 </HTML>                     
