--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5888,6 +5888,19 @@ PNH sightseeing on 5th-6th .<br>
 * NPH dental appointment (some spacing adjustment and got new trays, 18-21) on 24th.<br>
 * Play day (Badminton) at CMS on 28th, lunch at MOD Pizza.<br>
 * Shopping at Sam's club on 28th.<br>
+* HNH swimming class on 29th at 1.30pm (makeup).</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Oct 2024</TD>
+<TD>
+* HNH dental appointment (cleaning) on 2nd.<br>
+* Visited NY-RI-NH from 3rd to 6th with NPV-PHV-HPV.<br>
+* Left home at 1.30pm on 3rd, after 1 stop and some traffic reached NY at 5.30pm.<br>
+* Visited Summit One Vanderbilt for about 2 hours, and spent some time at Grand Central station.<br>
+* Dinner at Taco Bell in Hoboken, hotel stay at Holiday Inn on 3rd.<br>
+* 
 </Table> 
 
 </HTML>                     
