--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5896,25 +5896,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Oct 2024</TD>
 <TD>
 * HNH dental appointment (cleaning) on 2nd.<br>
-* Visited NY-RI-NH from 3rd to 6th with NPV-PHV-HPV.<br>
-* Left home at 1.30pm on 3rd, after 1 stop and some traffic reached NY at 5.30pm.<br>
-* Visited Summit One Vanderbilt for about 2 hours, and spent some time at Grand Central station.<br>
-* Dinner at Taco Bell in Hoboken-NJ, hotel stay at Holiday Inn on 3rd.<br>
-* Hirav picked up NPV-PHV from JFK airport and came to our hotel on 4th morning.<br>
-* Mazda parked at Hirav's friend's place, all left NJ for RI in a rental car on 4th at 11.30am.<br>
-* Reached Providence-RI after a couple of stops (Ice cream, Dunkin, Gas station) and traffic at about 5pm on 4th.<br>
-* Stay at SpringHill Suites Providence West Warwick hotel (Marriott) for 2 nights.<br>
-* Walked on the Providence River Pedestrian Bridge for city views, dinner at 'India' Indian restaurant on 4th.<br>
-* Breakfast in hotel, left at 10.45am for White Mountains-NH (~3.5 hours drive) on 5th.<br>
-* After 1 stop and a lot of traffic, reached the Hancock overlook at Kancamagus Hwy-NH at 4pm on 5th.<br>
-* Loon mountain gondola ride at 5pm, nice views from the ropeway, cold at the top.<br>
-* Evening 'snacks' around 6.30pm at Subway, dinner at Honest Restaurant near Boston at 9.30pm.<br>
-* Reached back to the hotel at about 11.15pm on 5th.<br>
-* Breakfast in hotel, left at 10.30am for Newport-RI (~30 min drive) on 6th.<br>
-* Mansions tour (drive), Cliff walk, fudge shop and lunch at Pasta Beach restaurant on 6th.<br>
-* Left Newport for LaGuardia airport-NY (about 3 hrs drive) at 1pm, after 1 stop and lot of traffic, reached at 6pm.<br>
-* HPV-NPV-PHV left for Raleigh, N-P-H drove to Newark to pick up Mazda and return the rental car at Newark ariport (~8pm).<br>
-* Dinner at Taco Bell, left NJ at 9.20pm, reached home at 12.20am (no stops, some traffic) on 6th/7th.<br>
+* Visited NY-RI-NH from 3rd to 6th with NPV-PHV-HPV -- <a href="./trip_details/north_east_trip_2024.txt"> Details</a>.<br>
 * 
 </Table> 
 
