--- a/home_index.html
+++ b/home_index.html
@@ -95,17 +95,19 @@ TR:nth-child(even) {
 
 <TH></h4>
 <a href="http://www.bankofamerica.com">BoA</a> (Bank & CC)<br>
-<a href="http://www.discover.com">Discover CC</a>
+<a href="https://personalsavings.americanexpress.com/">AmEx Bank</a> -- <a href="http://www.americanexpress.com">AmEx CC</a><br>
+<a href="https://www.chase.com/personal/credit-cards/login-account-access">SW-Chase</a>
 </h4></TH>
 
 <TH><h4>
-<a href="https://personalsavings.americanexpress.com/">AmEx Bank</a> -- <a href="http://www.americanexpress.com">AmEx CC</a><br>
-<a href="http://card.apple.com">Apple CC</a>   
+<a href="https://www.capitalone.com">CapitalOne</a> (Bank & CC)<br>
+<a href="https://www.chase.com/personal/credit-cards/login-account-access">Amazon-Chase</a>
 </h4></TH>
 
 <TH></h4>
-<a href="https://www.capitalone.com">CapitalOne</a> (Bank & CC)<br>
-<a href="https://www.chase.com/personal/credit-cards/login-account-access">Chase CC</a>
+<a href="http://www.discover.com">Discover CC</a>
+<a href="http://card.apple.com">Apple CC</a>   
+
 </h4></TH>
 </TR>
 </Table>
