--- a/home_index.html
+++ b/home_index.html
@@ -96,7 +96,7 @@ TR:nth-child(even) {
 
 <TH></h4>
 <a href="http://www.bankofamerica.com">BoA</a> (Bank & CC)<br>
-<a href="https://personalsavings.americanexpress.com/">AmEx Bank</a> -- <a href="http://www.americanexpress.com">AmEx CC</a><br>
+<a href="http://www.americanexpress.com">AmEx</a> (Bank & CC)<br>
 <a href="https://www.chase.com/personal/credit-cards/login-account-access">SW--Chase</a>
 </h4></TH>
 
