--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5897,7 +5897,12 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * HNH dental appointment (cleaning) on 2nd.<br>
 * Visited NY-RI-NH from 3rd to 6th with NPV-PHV-HPV -- <a href="./trip_details/north_east_trip_2024.txt"> Details</a>.<br>
-* 
+* N-H shopping at Giant on 10th.<br>
+* PNH flu and COVID vaccine on 11th at WTES.<br>
+* HNH swimming class on 12th at 11.00am.<br>
+* Shopping at Wegmans and Sam's club on 12th, lunch pickup from Falafel House.<br>
+* Shopping at Patel Brothers on 12th.<br>
+* HNH swimming class on 13th at 11.30am (makeup).<br>
 </Table> 
 
 </HTML>                     
