--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5741,6 +5741,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH baseball on 3rd at 6pm.<br>
 * HNH baseball on 5th at 6pm canceled due to rain/thunderstorm.<br>
 * PNH to WTES retirement party at Peerce's Indian restaurant on 6th (5.30 to 8.30pm).<br>
+* NPH dental appointment (cleaning) on the 6th.<br>
 * HNH baseball on 7th at 6pm -- playoff game (Clippers lost), season over.<br>
 * Drive to Sugarloaf mountain (60 miles) on 8th but park gate closed at 4pm.<br>
 * After a quick visit to a Vineyard, went to Patapsco Park (Hollofield).<br>
@@ -5874,7 +5875,8 @@ PNH sightseeing on 5th-6th .<br>
 * N-H to IAD airport to drop off PNH (Iberia/British Airways, Economy) on 8th.<br> 
 * Total ~162 miles (5.30 pm to 10.20 pm), all dinner at Subway (Tysons Corner).<br>
 * Bharatiben Cremation on 10th morning in UK.<br>
-* N-H to BWI airport to pick up PNH (British Airways, Economy) on 11th, dinner pick up from Chipotle.<br> 
+* N-H to BWI airport to pick up PNH (British Airways, Economy) on 11th, dinner pick up from Chipotle.<br>
+* NPH dental appointment (cleaning) on the 12th.<br> 
 * HNH swimming class on 14th at 11.00am.<br>
 * Shopping at Aldi and Sam's club on 14th.<br>
 * Bhuvan to India for Asthi visarjan and pujas on 14th-18th.<br>
