--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5899,7 +5899,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * HNH dental appointment (cleaning) on 2nd.<br>
 * Visited NY-RI-NH from 3rd to 6th with NPV-PHV-HPV -- <a href="./trip_details/north_east_trip_2024.txt"> Details</a>.<br>
-* Booked Southwest flight to LA/ONT for December on 8th.<br>
+* Booked Southwest flight to LA/ONT for 24-30th December on 8th.<br>
 * Got Southwest Rapid Rewards Priority (Chase) credit card on 8th.<br>
 * Closed Discover credit card on 8th.<br>
 * Closed Apple credit card on 10th.<br>
