--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5909,6 +5909,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans and Sam's club on 12th, lunch pickup from Falafel House.<br>
 * Shopping at Patel Brothers on 12th.<br>
 * HNH swimming class on 13th at 11.30am (makeup).<br>
+* Saw Comet Tsuchinshan–ATLAS in the sky just after sunset at Loch Raven Park/Drive on 15th.<br>
 </Table> 
 
 </HTML>                     
