--- a/personal/memories.html
+++ b/personal/memories.html
@@ -3365,7 +3365,7 @@ PNH sightseeing on 5th-6th .<br>
 * Diwali function at Rasoi restaurant (College Park, MD) -- ~45 miles one way -- 4.30pm to 9.30pm on 28th.<br>
 * PNH solo dance performance + other entertainment, dinner -- met Mayurmama, Pranjali all and other Nagars.<br>
 * Shopping at Sam's club and Walmart (HNH clothes, Halloween candies, NPH Jacket) on 29th.<br>
-* PNH/NPH at HNH school Halloween party (HNH CatBoy) -- Versailles parade/party in the evening on 31st -- NPH flu shot at STScI.</TD>
+* PNH/NPH at HNH school Halloween party (HNH CatBoy) -- Versailles parade/party in the evening on 31st -- NPH flu vaccine at STScI.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
@@ -3373,7 +3373,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Nov 2017</TD>
 <TD>
 * NPH dental appointment (periodontist - check-up) on 1st -- PNH cold/cough.<br>
-* HNH flu shot at Dr. Kumar on 3rd (half-day school) -- Domino's Pizza.<br>
+* HNH flu vaccine at Dr. Kumar on 3rd (half-day school) -- Domino's Pizza.<br>
 * Shopping at Michael's, Wegmans -- drive around Loch Raven Reservoir on 4th.<br>
 * Shopping at Patel Brothers, Sam's club on 5th.<br>
 * NPH and PNH allergy (?) cough whole week -- NPH work from home (7th-10th).<br>
@@ -3687,7 +3687,7 @@ PNH sightseeing on 5th-6th .<br>
 * Rakshabandhan - visited Turkey Hill Experience, Inner Harbor, Rental car pick-up at BWI -- 1.15pm to 7.15pm on 16th.<br> 
 * N-D left early morning for Dulles airport on 17th (drove ~400 miles during their trip) -- PNH birthday cake, roses from Harshil.<br>
 * NPH/PNH health check-up at STScI on 18th (PNH normal, NPH borderline high/low).<br>
-* HNH doctor appointment on 19th with Dr. Kumar for flu shot / follow-up on skin problem.<br>
+* HNH doctor appointment on 19th with Dr. Kumar for flu vaccine / follow-up on skin problem.<br>
 * PHV family bought new Jeep SUV on 20th.<br>
 * PNH shopping at Sam's club, Target, Walmart on 21st.<br>
 * Shopping at Patel Brothers, Sam's club -- PNH eye exam / new glasses -- on 22nd.<br>
@@ -3710,7 +3710,7 @@ PNH sightseeing on 5th-6th .<br>
 * Kalpana Bakshi visited us on 13th -- 12.30pm to 6.30pm.<br>
 * PNH garba practice, NPH/HNH to Towson Library on 14th -- dinner at Domino's Pizza, GB Temple.<br>
 * Cooler weather has started from 14th -- 50s and 60s day time temps.<br>
-* NPH flu shot at STScI on 16th.<br>
+* NPH flu vaccine at STScI on 16th.<br>
 * NPH dental appointment (periodontist - check-up) on 18th -- PNH garba practice -- HNH field trip.<br>
 * Parth Oza Garba/PNH performance at Boyds (~55 miles one way) on 19th -- PNH went early, NPH/JPH/HNH later in Urmil's car.<br>
 * Mayurbhai/Tanmay Anjaria family visited on 21st -- 2.00pm to 3.30pm.<br>
@@ -4035,7 +4035,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH haircut, PNH to garba practice at Takoma Park (near DC) on 22nd.<br>
 * HNH bought suit (Navy, Size 8, Slim fit) from Amazon on 23rd.<br>
 * PNH to Maaco (Civic bumper repair), Civic emission test, dental appointment on 24th.<br>
-* HNH flu shot at Dr. Kumar on 25th.<br>
+* HNH flu vaccine at Dr. Kumar on 25th.<br>
 * Hirav visited Towson -- 26th to 29th -- N-P-H to pick-up at BWI on 26th night.<br>
 * Shopping at Sam's club (Hirav drove CR-V), Patel Brothers on 27th.<br>
 * Visited Turkey Hill and Hershey's Chocolate World -- 2.00pm to 10.00pm -- dinner at 'Passage to India' (Harrisburg).<br>
@@ -4048,7 +4048,7 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Oct 2019</TD>
 <TD>
-* NPH flu shot at STScI on 1st.<br>
+* NPH flu vaccine at STScI on 1st.<br>
 * I-485 package rejected on 1st because no visa number available in September.<br>
 * New car plate JW0161 (Maryland) -- JWST plate -- from 3rd.<br>
 * I-485 pacakage (added Supplement J) re-submitted on 3rd -- USCIS got it on 4th.<br>
@@ -4381,11 +4381,11 @@ PNH sightseeing on 5th-6th .<br>
 * Ordered online grocery from Wegmans on 12th (curbside pick-up on 13th).<br>
 * NPH haircut by PNH on 13th.<br> 
 * HNH appointment with Dr. Kumar for annual checkup on 15th (normal reports -- need eye checkup).<br>
-* HNH flu shot at Dr. Kumar on 15th.<br>
+* HNH flu vaccine at Dr. Kumar on 15th.<br>
 * NPH dental appointment (cleaning) on 16th.<br>
 * One Straw farm veggies pick-up from Muller on 16th.<br>
 * Coronavirus -- 6,800,000+ (30,000,000+) cases and 201,000+ (950,000+) dead in US (World), India 2nd after US with 5.4M cases.<br>
-* NPH/PNH flu shot at CVS on 19th, Shopping at Sam's club (inside after 6 months), dinner pick-up MOD Pizza.<br>
+* NPH/PNH flu vaccine at CVS on 19th, Shopping at Sam's club (inside after 6 months), dinner pick-up MOD Pizza.<br>
 * HNH haircut by PNH on 20th.<br>
 * Baseball playground (Bykota Center) on 26th, dinner pick-up Zoes Kitchen.<br>
 * Ordered online grocery from Wegmans on 25th (curbside pick-up on 26th).<br>
@@ -4741,7 +4741,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH eye check-up at LensCrafters (Towson Mall) on 2nd, dinner pick-up from Seasons Pizza.<br>
 * Zoom chat with ST family+ (Nikhilmama prayer meeting) on 3rd.<br>
 * HNH haircut by PNH -- Shopping at Sam's club on 3rd.<br>
-* NPH flu shot at STScI on 7th.<br>
+* NPH flu vaccine at STScI on 7th.<br>
 * HNH started Tennis class after school (once a week for 5 weeks) on 7th.<br>
 * Hirav came for one night on way to NJ on 8th.<br>
 * Shopping at Walmart, dinner at Subway on 9th.<br>
@@ -4751,7 +4751,7 @@ PNH sightseeing on 5th-6th .<br>
 * NPH dental appointment (cleaning) on 13th.<br>
 * SuperTech AC, furnace, and thermostat replacement -- 8am to 5pm -- on 15th.<br>
 * PestNow pest control (quarterly) on 15th.<br>
-* PNH flu shot at Walgreens on 15th.<br>
+* PNH flu vaccine at Walgreens on 15th.<br>
 * Shopping at Wegmans, dinner pick-up from Pizza Hut on 16th.<br>
 * HNH not feeling well due to cold on 17th -- school required COVID test (at Rotunda Urgent Care) on 18th -negative.<br>
 * Darshanakaki visited us -- 22nd to 25th.<br>
@@ -4771,17 +4771,17 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Nov 2021</TD>
 <TD>
-* HNH flu shot at Dr. Kumar on 1st.<br>
+* HNH flu vaccine at Dr. Kumar on 1st.<br>
 * Diwali days from 1st to 5th -- New Year at GB Temple on 5th.<br>
 * Shopping at Old Navy, dinner at Panera Bread on 6th.<br>
 * Zoom chat with Ramsuman group on 7th.<br>
 * Shopping at Sam's club on 7th.<br>
 * NPH to Owings Mills for CR-V VEIP on 12th.<br>
 * HNH (with PNH) Green Team hiking at Cromwell Valley Park on 13th.<br>
-* PNH COVID booster shot (Pfizer) on 13th, dinner pick-up from Taco Bell/Towson Falafel House.<br>
+* PNH COVID booster vaccine (Pfizer) on 13th, dinner pick-up from Taco Bell/Towson Falafel House.<br>
 * NPH haircut by PNH -- Shopping at Wegmans on 14th.<br>
 * HNH got first dose of COVID vaccine (Pfizer) at BCDH/White Marsh on 20th.<br>
-* NPH COVID booster shot (Pfizer) on 20th (with HNH).<br>
+* NPH COVID booster vaccine (Pfizer) on 20th (with HNH).<br>
 * Breakfast and Lunch at McDonald's -- Shopping at Kohl's, Sam's club, Cake by Jason on 20th.<br>
 * Hirav came from NJ on 20th -- dinner at Mint Leaf, Jason's cake in jar for Hirav's birthday.<br>
 * PNH Honda Civic oil change on 21st at Jiffy Lube.<br>
@@ -5098,11 +5098,11 @@ PNH sightseeing on 5th-6th .<br>
 * Diwali celebration at Neesha-Dan's house on 22nd evening -- both days with  Shambhaviben family.<br>
 * Left Pittsburgh at 3pm on 23rd. Reached Cockeysville at 7.30pm after 2 stops (40/68/70).<br>
 * NPH drove while going and PNH while coming back -- 1st time PNH drove all 250 miles.<br>
-* HNH flu shot at Dr. Kumar on 24th.<br>
+* HNH flu vaccine at Dr. Kumar on 24th.<br>
 * NPH approved for new AmEx Cash Back card on 24th.<br>
 * Free wooden rocking chair pickup from ST colleague on 25th.<br>
-* NPH flu shot at STScI on 27th.<br>
-* PNH flu shot at CVS (Baltimore) on 28th.<br>
+* NPH flu vaccine at STScI on 27th.<br>
+* PNH flu vaccine at CVS (Baltimore) on 28th.<br>
 * Shopping at Wegmans, Amazon return at Kohl's, dinner pick-up from Taco Bell on 29th.<br>
 * NPH-HNH haircut at Supercuts on 30th.<br>
 * HNH school event (Wax museum) on 31st, NPH to LensCrafter for checking on new glasses.<br>
@@ -5449,7 +5449,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Sam's club, Wegmans and Kohl's Amazon return, Library (with BCD) on 9th.<br>
 * HNH swimming class on 10th at 11.30am, PNH-HNH shopping at Walmart.<br>
 * STScI Orioles game night at Camden Yards (section 324) on 14th, NPH-HNH went from 5:45pm to 11:00pm.<br>
-* HNH flu shot at Dr. Kumar on 15th.<br>
+* HNH flu vaccine at Dr. Kumar on 15th.<br>
 * Shopping at Wegmans (with BCD) on 16th.<br>
 * HNH swimming class on 17th at 11.30am.<br>
 * For PNH birthday - Lunch pick-up from Mint Leaf on 17th (rainy/cold weather), cup cake/fruit tart cutting.<br>
@@ -5462,7 +5462,7 @@ PNH sightseeing on 5th-6th .<br>
 * PNH Dr appointment (Mammogram) on 25th -- normal reports.<br>
 * HNH orthodontist appointment on 25th, X-rays -- rubber band snapped while coming back.<br>
 * HNH orthodontist appointment on 26th to fix the rubber band.<br>
-* NPH flu shot at STScI on 28th.<br>
+* NPH flu vaccine at STScI on 28th.<br>
 * Play day (Badminton) at CMS on 30th, dinner pick up from Domino's.<br>
 * Dharafai and Urmil came for about 1 hour to meet Bharatiben on 30th.</TD>
 <TR>
@@ -5904,12 +5904,27 @@ PNH sightseeing on 5th-6th .<br>
 * Closed Discover credit card on 8th.<br>
 * Closed Apple credit card on 10th.<br>
 * N-H shopping at Giant on 10th.<br>
-* PNH flu and COVID vaccine on 11th at WTES.<br>
+* PNH flu and COVID vaccines on 11th at WTES.<br>
 * HNH swimming class on 12th at 11.00am.<br>
 * Shopping at Wegmans and Sam's club on 12th, lunch pickup from Falafel House.<br>
 * Shopping at Patel Brothers on 12th.<br>
 * HNH swimming class on 13th at 11.30am (makeup).<br>
 * Saw Comet Tsuchinshan–ATLAS in the sky just after sunset at Loch Raven Park/Drive on 15th.<br>
+* NPH flu vaccine at STScI on 16th.<br>
+* PHV-NPV-HPV visited Baltimore from 17th to 20th.<br>
+* Came from Raleigh at 10.30pm on 17th.<br>
+* Rented Chrysler Pacifica from Enterprise on 18th morning for 2 days.<br>
+* On 18th -- breakfast-lunch at home, left for Vraj at ~3.30pm, after 1 stop and some traffic reached at 6pm -- darshan, aarti.<br>
+* Left Vraj at ~7.15pm and reached MOD Pizza (Reading) at ~8pm -- reached back home at ~10.30pm<br>
+* On 19th -- breakfast-lunch at home, left for DC at ~12.30pm, lot of traffic, reached National Air and Space Museum at ~3pm.<br>
+* Spent about 1.5 hours at the Museum, drinks at Starbucks, ~5-6.30pm at National Mall.<br>
+* Falafel Inc was closed, reached Woodlands (Gaithersburg) at ~7.30pm.<br>
+* After dinner, Sarah's Handmade Ice cream, left around 9pm, reached home at ~10pm.<br>
+* On 20th -- Rakshabandhan, returned rental car (total drove ~400 miles), shopping at Sam's club.<br>
+* PHV-NPV-HPV left for Raleigh at ~2.15pm and reached around 9.30pm after a couple of stops.<br>
+* NPH COVID vaccine at Walgreens on 20th.<br>
+* Shopping at Wegmans on 20th.<br>
+* HNH flu and COVID vaccines on 22nd at Walgreens.<br>
 </Table> 
 
 </HTML>                     
