--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5920,11 +5920,13 @@ PNH sightseeing on 5th-6th .<br>
 * Spent about 1.5 hours at the Museum, drinks at Starbucks, ~5-6.30pm at National Mall.<br>
 * Falafel Inc was closed, reached Woodlands (Gaithersburg) at ~7.30pm.<br>
 * After dinner, Sarah's Handmade Ice cream, left around 9pm, reached home at ~10pm.<br>
-* On 20th -- Rakshabandhan, returned rental car (total drove ~400 miles), shopping at Sam's club.<br>
+* On 20th -- Rakshabandhan, returned rental car (total ~400 miles), shopping at Sam's club.<br>
 * PHV-NPV-HPV left for Raleigh at ~2.15pm and reached around 9.30pm after a couple of stops.<br>
 * NPH COVID vaccine at Walgreens on 20th.<br>
 * Shopping at Wegmans on 20th.<br>
 * HNH flu and COVID vaccines on 22nd at Walgreens.<br>
+* HNH participated in the school badminton tournament (doubles) at Dundalk School on 26th (10.30am to 12.30pm).<br>
+* NPH-HNH haircut at home by PNH on 26th.<br>
 </Table> 
 
 </HTML>                     
