--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5927,6 +5927,10 @@ PNH sightseeing on 5th-6th .<br>
 * HNH flu and COVID vaccines on 22nd at Walgreens.<br>
 * HNH participated in the school badminton tournament (doubles) at Dundalk School on 26th (10.30am to 12.30pm).<br>
 * NPH-HNH haircut at home by PNH on 26th.<br>
+* Mazda 3rd service on 26th.<br>
+* HNH swimming class on 27th at 11.30am (makeup).<br>
+* Shopping at Sam's club, Walmart, and Wegman on 27th.<br>
+* 
 </Table> 
 
 </HTML>                     
