--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5925,11 +5925,13 @@ PNH sightseeing on 5th-6th .<br>
 * NPH COVID vaccine at Walgreens on 20th.<br>
 * Shopping at Wegmans on 20th.<br>
 * HNH flu and COVID vaccines on 22nd at Walgreens.<br>
-* HNH participated in the school badminton tournament (doubles) at Dundalk School on 26th (10.30am to 12.30pm).<br>
+* HNH participated in the CMS badminton tournament (doubles) at Dundalk School on 26th (10.30am to 12.30pm).<br>
 * NPH-HNH haircut at home by PNH on 26th.<br>
 * Mazda 3rd service on 26th.<br>
 * HNH swimming class on 27th at 11.30am (makeup).<br>
 * Shopping at Sam's club, Walmart, and Wegman on 27th.<br>
+* Watching MLB World Series between LA Dodgers and NY Yankees.<br>
+* Diwali celebration at home with lights, fireworks, and sweets.<br>
 * 
 </Table> 
 
