--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5929,10 +5929,18 @@ PNH sightseeing on 5th-6th .<br>
 * NPH-HNH haircut at home by PNH on 26th.<br>
 * Mazda 3rd service on 26th.<br>
 * HNH swimming class on 27th at 11.30am (makeup).<br>
-* Shopping at Sam's club, Walmart, and Wegman on 27th.<br>
-* Watching MLB World Series between LA Dodgers and NY Yankees.<br>
-* Diwali celebration at home with lights, fireworks, and sweets.<br>
+* Shopping at Sam's Club, Walmart, and Wegman on 27th.<br>
+* Watching MLB World Series between LA Dodgers and NY Yankees (LA won series 4-1 on 30th).<br>
+* Diwali celebration at home with lights, fireworks, and sweets (29th--31st).<br>
+* HNH Halloween trick-or-treat -- warmer weather.</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Nov 2024</TD>
+<TD>
 * 
+
 </Table> 
 
 </HTML>                     
