--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5932,13 +5932,19 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Sam's Club, Walmart, and Wegman on 27th.<br>
 * Watching MLB World Series between LA Dodgers and NY Yankees (LA won series 4-1 on 30th).<br>
 * Diwali celebration at home with lights, fireworks, and sweets (29th--31st).<br>
-* HNH Halloween trick-or-treat -- warmer weather.</TD>
+* HNH Halloween trick-or-treat on 31st -- warmer weather.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
 </TR>
 <TD>Nov 2024</TD>
 <TD>
+* Visited Raleigh for 3 days -- 1st to 3rd -- to celebrate Diwali with PHV/NPV/HPV (total ~800 miles).<br>
+* Left home in Mazda at 8.50am on 1st, after 2 stops and lunch at Subway reached Hirav's place at 3.30pm.<br>
+* Hirav's friends came to his place for dinner and Diwali fireworks on 1st.<br>
+* Visited Bass Lake Park on 2nd morning, a Hindu temple in the evening, and dinner/celebrations at Hirav's friend's place.<br>
+* Lunch at Udupi restaurant on 3rd, and checked out Hirav's pickleball games in the afternoon.<br>
+* Left Raleigh at 1.45pm on 3rd, after 2 stops reached Taco Bell at Cockeysville at 7.50pm, TB dinner and Coldstone ice cream, reached home at 9pm.<br>
 * 
 
 </Table> 
