--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5944,7 +5944,7 @@ PNH sightseeing on 5th-6th .<br>
 * Hirav's friends came to his place for dinner and Diwali fireworks on 1st.<br>
 * Visited Bass Lake Park on 2nd morning, a Hindu temple in the evening, and dinner/celebrations at Hirav's friend's place.<br>
 * Lunch at Udupi restaurant on 3rd, and checked out Hirav's pickleball games in the afternoon.<br>
-* Left Raleigh at 1.45pm on 3rd, after 2 stops reached Taco Bell at Cockeysville at 7.50pm, TB dinner and Coldstone ice cream, reached home at 9pm.<br>
+* Left Raleigh at 1.45pm on 3rd, after 2 stops reached Cockeysville at 7.50pm, Taco Bell dinner and Coldstone ice cream, reached home at 9pm.<br>
 * 
 
 </Table> 
