--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5945,8 +5945,9 @@ PNH sightseeing on 5th-6th .<br>
 * Visited Bass Lake Park on 2nd morning, a Hindu temple in the evening, and dinner/celebrations at Hirav's friend's place.<br>
 * Lunch at Udupi restaurant on 3rd, and checked out Hirav's pickleball games in the afternoon.<br>
 * Left Raleigh at 1.45pm on 3rd, after 2 stops reached Cockeysville at 7.50pm, Taco Bell dinner and Coldstone ice cream, reached home at 9pm.<br>
-* 
-
+* US President elections on 5th -- Donald Trump beat Kamala Harris for his 2nd (non-consecutive) term.<br>
+* PHV-NPV-HPV came on 6th night at 10pm from Raleigh.<br>
+* Left for NJ/NY on 7th afternoon, PHV-NPV flight from JFK on 8th morning.<br>
 </Table> 
 
 </HTML>                     
