--- a/personal/us_presidents.html
+++ b/personal/us_presidents.html
@@ -25,192 +25,244 @@ A:visited{color:blue}
 <center>
 <Table Border=1 cellpadding=1 width=40%>	
 	<TR ALIGN=center>
+		<TH><b><u>Number</u></b></TH>
 		<TH><b><u>President</u></b></TH>
 		<TH><b><u>Length of Term</u></b></TH>
 	</TR>
 <TR ALIGN=center>
+	<TD>1.</TD>
 	<TD>George Washington</TD>
 	<TD>(1789 to 1797)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>2.</TD>
 	<TD>John Adams</TD>
 	<TD>(1797 to 1801)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>3.</TD>
 	<TD>Thomas Jefferson</TD>
 	<TD>(1801 to 1809)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>4.</TD>
 	<TD>James Madison</TD>
 	<TD>(1809 to 1817)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>5.</TD>
 	<TD>James Monroe</TD>
 	<TD>(1817 to 1825)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>6.</TD>
 	<TD>John Quincy Adams</TD>
 	<TD>(1825 to 1829)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>7.</TD>
 	<TD>Andrew Jackson</TD>
 	<TD>(1829 to 1837)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>8.</TD>
 	<TD>Martin Van Buren</TD>
 	<TD>(1837 to 1841)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>9.</TD>
 	<TD>William Henry Harrison</TD>
 	<TD>(1841)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>10.</TD>
 	<TD>John Tyler</TD>
 	<TD>(1841 to 1845)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>11.</TD>
 	<TD>James Knox Polk</TD>
 	<TD>(1845 to 1849)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>12.</TD>
 	<TD>Zachary Taylor</TD>
 	<TD>(1849 to 1850)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>13.</TD>
 	<TD>Millard Fillmore</TD>
 	<TD>(1850 - 1853)</TD>
 </TR>
 <TR ALIGN=center>
+	<TD>14.</TD>
 	<TD>Franklin Pierce</TD>
 	<TD>(1853 - 1857)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>James Buchanan</TD>
-        <TD>(1857 to 1861)</TD>
+	<TD>15.</TD>
+    <TD>James Buchanan</TD>
+    <TD>(1857 to 1861)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Abraham Lincoln</TD>
-        <TD>(1861 to 1865)</TD>
+	<TD>16.</TD>
+    <TD>Abraham Lincoln</TD>
+    <TD>(1861 to 1865)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Andrew Johnson</TD>
-        <TD>(1865 to 1869)</TD>
+	<TD>17.</TD>
+    <TD>Andrew Johnson</TD>
+    <TD>(1865 to 1869)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Ulysses Simpson Grant</TD>
-        <TD>(1869 to 1877)</TD>
+	<TD>18.</TD>
+    <TD>Ulysses Simpson Grant</TD>
+    <TD>(1869 to 1877)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Rutherford Birchard Hayes</TD>
-        <TD>(1877 to 1881)</TD>
+	<TD>19.</TD>
+    <TD>Rutherford Birchard Hayes</TD>
+    <TD>(1877 to 1881)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>James Abram Garfield</TD>
-        <TD>(1881)</TD>
+	<TD>20.</TD>
+    <TD>James Abram Garfield</TD>
+    <TD>(1881)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Chester Alan Arthur</TD>
-        <TD>(1881 to 1885)</TD>
+	<TD>21.</TD>
+    <TD>Chester Alan Arthur</TD>
+    <TD>(1881 to 1885)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Stephen Grover Cleveland</TD>
-        <TD>(1885 to 1889)</TD>
+	<TD>22.</TD>
+    <TD>Stephen Grover Cleveland</TD>
+    <TD>(1885 to 1889)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Benjamin Harrison</TD>
-        <TD>(1889 to 1893)</TD>
+	<TD>23.</TD>
+    <TD>Benjamin Harrison</TD>
+    <TD>(1889 to 1893)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Stephen Grover Cleveland</TD>
-        <TD>(1893 to 1897)</TD>
+	<TD>24.</TD>
+    <TD>Stephen Grover Cleveland</TD>
+    <TD>(1893 to 1897)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>William McKinley</TD>
-        <TD>(1897 to 1901)</TD>
+	<TD>25.</TD>
+    <TD>William McKinley</TD>
+    <TD>(1897 to 1901)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Theodore Roosevelt</TD>
-        <TD>(1901 to 1909)</TD>
+	<TD>26.</TD>
+    <TD>Theodore Roosevelt</TD>
+    <TD>(1901 to 1909)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>William Howard Taft</TD>
-        <TD>(1909 to 1913)</TD>
+	<TD>27.</TD>
+    <TD>William Howard Taft</TD>
+    <TD>(1909 to 1913)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Thomas Woodrow Wilson</TD>
-        <TD>(1913 to 1921)</TD>
+	<TD>28.</TD>
+    <TD>Thomas Woodrow Wilson</TD>
+    <TD>(1913 to 1921)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Warren Gamaliel Harding</TD>
-        <TD>(1921 to 1923)</TD>
+	<TD>29.</TD>
+    <TD>Warren Gamaliel Harding</TD>
+    <TD>(1921 to 1923)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>John Calvin Coolidge</TD>
-        <TD>(1923 to 1929)</TD>
+	<TD>30.</TD>
+    <TD>John Calvin Coolidge</TD>
+    <TD>(1923 to 1929)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Herbert Clark Hoover</TD>
-        <TD>(1929 to 1933)</TD>
+	<TD>31.</TD>
+    <TD>Herbert Clark Hoover</TD>
+    <TD>(1929 to 1933)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Franklin Delano Roosevelt</TD>
-        <TD>(1933 to 1945)</TD>
+	<TD>32.</TD>
+    <TD>Franklin Delano Roosevelt</TD>
+    <TD>(1933 to 1945)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Harry S. Truman</TD>
-        <TD>(1945 to 1953)</TD>
+	<TD>33.</TD>
+    <TD>Harry S. Truman</TD>
+    <TD>(1945 to 1953)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Dwight David Eisenhower</TD>
-        <TD>(1953 to 1961)</TD>
+	<TD>34.</TD>
+    <TD>Dwight David Eisenhower</TD>
+    <TD>(1953 to 1961)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>John Fitzgerald Kennedy</TD>
-        <TD>(1961 to 1963)</TD>
+	<TD>35.</TD>
+    <TD>John Fitzgerald Kennedy</TD>
+    <TD>(1961 to 1963)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Lyndon Baines Johnson</TD>
-        <TD>(1963 to 1969)</TD>
+	<TD>36.</TD>
+    <TD>Lyndon Baines Johnson</TD>
+    <TD>(1963 to 1969)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Richard Milhous Nixon</TD>
-        <TD>(1969 to 1974)</TD>
+	<TD>37.</TD>
+    <TD>Richard Milhous Nixon</TD>
+    <TD>(1969 to 1974)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Gerald Rudolph Ford</TD>
-        <TD>(1974 to 1977)</TD>
+	<TD>38.</TD>
+    <TD>Gerald Rudolph Ford</TD>
+    <TD>(1974 to 1977)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>James Earl Carter Jr.</TD>
-        <TD>(1977 to 1981)</TD>
+	<TD>39.</TD>
+    <TD>James Earl Carter Jr.</TD>
+    <TD>(1977 to 1981)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Ronald Wilson Reagan</TD>
-        <TD>(1981 to 1989)</TD>
+	<TD>40.</TD>
+    <TD>Ronald Wilson Reagan</TD>
+    <TD>(1981 to 1989)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>George Herbert Walker Bush</TD>
-        <TD>(1989 to 1993)</TD>
+	<TD>41.</TD>
+    <TD>George Herbert Walker Bush</TD>
+    <TD>(1989 to 1993)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>William Jefferson Clinton</TD>
-        <TD>(1993 to 2001)</TD>
+	<TD>42.</TD>
+    <TD>William Jefferson Clinton</TD>
+    <TD>(1993 to 2001)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>George Walker Bush</TD>
-        <TD>(2001 to 2009)</TD>
+	<TD>43.</TD>
+    <TD>George Walker Bush</TD>
+    <TD>(2001 to 2009)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Barack Hussein Obama</TD>
-        <TD>(2009 to 2017)</TD>
+	<TD>44.</TD>
+    <TD>Barack Hussein Obama</TD>
+    <TD>(2009 to 2017)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Donald John Trump</TD>
-        <TD>(2017 to 2021)</TD>
+	<TD>45.</TD>
+    <TD>Donald John Trump</TD>
+    <TD>(2017 to 2021)</TD>
 </TR>
 <TR ALIGN=center>
-        <TD>Joseph R. Biden</TD>
-        <TD>(2021 to present)</TD>
+	<TD>46.</TD>
+    <TD>Joseph R. Biden</TD>
+    <TD>(2021 to 2025)</TD>
+</TR>
+<TR ALIGN=center>
+	<TD>47.</TD>
+    <TD>Donald John Trump</TD>
+    <TD>(2025 to 2029)</TD>
 </TR>
 </Table></center>
 <br>
