--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5946,8 +5946,13 @@ PNH sightseeing on 5th-6th .<br>
 * Lunch at Udupi restaurant on 3rd, and checked out Hirav's pickleball games in the afternoon.<br>
 * Left Raleigh at 1.45pm on 3rd, after 2 stops reached Cockeysville at 7.50pm, Taco Bell dinner and Coldstone ice cream, reached home at 9pm.<br>
 * US President elections on 5th -- Donald Trump beat Kamala Harris for his 2nd (non-consecutive) term.<br>
-* PHV-NPV-HPV came on 6th night at 10pm from Raleigh.<br>
-* Left for NJ/NY on 7th afternoon, PHV-NPV flight from JFK on 8th morning.<br>
+* PHV-NPV-HPV came on 6th night at 11pm from Raleigh.<br>
+* Left for NY on 7th afternoon (5.15pm), PHV-NPV Air India flight from JFK on 8th morning.<br>
+* Shobhaben and Shital visited us for 1 night from Philadelphia -- came on 8th evening (6.30pm), and left on 9th morning (9am).<br>
+* HNH swimming class on 9th at 11.00am.<br>
+* Shopping at Walmart, Amazon return at Kohl's, lunch at Baja Fresh on 9th.<br>
+* HNH swimming class on 10th at 1.00pm (makeup).<br>
+* 
 </Table> 
 
 </HTML>                     
