--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5946,13 +5946,14 @@ PNH sightseeing on 5th-6th .<br>
 * Lunch at Udupi restaurant on 3rd, and checked out Hirav's pickleball games in the afternoon.<br>
 * Left Raleigh at 1.45pm on 3rd, after 2 stops reached Cockeysville at 7.50pm, Taco Bell dinner and Coldstone ice cream, reached home at 9pm.<br>
 * US President elections on 5th -- Donald Trump beat Kamala Harris for his 2nd (non-consecutive) term.<br>
+* NPH dental appointment (scanning for Retainers, progress on track) on 5th.<br>
 * PHV-NPV-HPV came on 6th night at 11pm from Raleigh.<br>
 * Left for NY on 7th afternoon (5.15pm), PHV-NPV Air India flight from JFK on 8th morning.<br>
 * Shobhaben and Shital visited us for 1 night from Philadelphia -- came on 8th evening (6.30pm), and left on 9th morning (9am).<br>
 * HNH swimming class on 9th at 11.00am.<br>
 * Shopping at Walmart, Amazon return at Kohl's, lunch at Baja Fresh on 9th.<br>
-* HNH swimming class on 10th at 1.00pm (makeup).<br>
-* 
+* HNH swimming class on 10th at 1.00pm (makeup) -- cleared Pro 2 level.<br>
+* HNH swimming class on 17th at 3.00pm -- started swim force level.<br>
 </Table> 
 
 </HTML>                     
