--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5953,7 +5953,11 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 9th at 11.00am.<br>
 * Shopping at Walmart, Amazon return at Kohl's, lunch at Baja Fresh on 9th.<br>
 * HNH swimming class on 10th at 1.00pm (makeup) -- cleared Pro 2 level.<br>
-* HNH swimming class on 17th at 3.00pm -- started swim force level.<br>
+* Dinner pick up from Dominos and Papa Johns on 15th.<br> 
+* HNH swimming class on 16th at 2.00pm (makeup).<br>
+* Shopping at Wegmans on 16th.<br>
+* HNH swimming class on 17th at 3.00pm -- started 1-hr swim force level.<br>
+* 
 </Table> 
 
 </HTML>                     
