--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5957,7 +5957,11 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 16th at 2.00pm (makeup).<br>
 * Shopping at Wegmans on 16th.<br>
 * HNH swimming class on 17th at 3.00pm -- started 1-hr swim force level.<br>
-* 
+* First light snow of the season on 22nd morning.<br>
+* Dinner at Qdoba on 22nd.<br>
+* Shopping at Wegmans, electronics items at dumpster on 23rd.<br>
+* HNH swimming class on 24th at 3.00pm.<br>
+* Honda CR-V VEIP self test on 24th.<br>
 </Table> 
 
 </HTML>                     
