--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5962,7 +5962,9 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans, electronics items at dumpster on 23rd.<br>
 * HNH swimming class on 24th at 3.00pm.<br>
 * Honda CR-V VEIP self test on 24th.<br>
-</Table> 
+* NPH dental appointment on 26th.<br> 
+* Done with aligners, removed attachments/polishing and started wearing Retainers on 26th.<br>
+* 
 
 </HTML>                     
                        
