--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5964,7 +5964,9 @@ PNH sightseeing on 5th-6th .<br>
 * Honda CR-V VEIP self test on 24th.<br>
 * NPH dental appointment on 26th.<br> 
 * Done with aligners, removed attachments/polishing and started wearing Retainers on 26th.<br>
-* 
+* NPH picked up YMCA charity walk packages from Y-Towson on 27th.<br>
+* Turkey Trot 5K (3.1m) charity walk at Y-Towson from 8.15am to 10am on 28th -- walk took ~58 minutes.<br>
+*  
 
 </HTML>                     
                        
